# intern-skills

./: .gitignore  README.md  pyproject.toml  requirements-cpu.txt
notebooks/: pytorch_mnist.ipynb
