[tool.poetry]
name = "intern_skills"
version = "0.1.0"
description = ""
authors = ["tall-josh <joshua.d.patterson1@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
jupyterlab = "^3.3.0"
torch = "^1.10.2"
torchvision = "^0.11.3"
nbstripout = "^0.5.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
